--- a/.github/workflows/beta-images.yml
+++ b/.github/workflows/beta-images.yml
@@ -48,16 +48,15 @@ jobs:
           docker buildx build \
             --push \
             --platform linux/arm64,linux/amd64 \
-            --build-arg GIT_VERSION="${{ env.GIT_VERSION }}" \
             -f Dockerfile \
-            -t truemark/aws-flyway:beta-${{ env.GIT_VERSION }} \
+            -t truemark/aws-flyway:beta-${{ github.run_number }}.${{ github.run_attempt }} \
             -t truemark/aws-flyway:beta \
             .
       - name: Copy beta-${{ env.GIT_VERSION }} to ECR
         uses: truemark/skopeo-copy-action@v1
         with:
-          src-image: "docker://truemark/aws-flyway:beta-${{ env.GIT_VERSION }}"
-          dest-image: "docker://public.ecr.aws/truemark/aws-flyway:beta-${{ env.GIT_VERSION }}"
+          src-image: "docker://truemark/aws-flyway:beta-${{ github.run_number }}.${{ github.run_attempt }}"
+          dest-image: "docker://public.ecr.aws/truemark/aws-flyway:beta-${{ github.run_number }}.${{ github.run_attempt }}"
           src-username: "${{ secrets.DOCKER_HUB_USERNAME }}"
           src-password: "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}"
           dest-username: "${{ steps.ecr-login.outputs.docker_username_public_ecr_aws }}"
